--- a/sections/06-results.tex
+++ b/sections/06-results.tex
@@ -1112,242 +1112,6 @@ problem~\cite{Ma:2010ft}.
 % an open research problem~\cite{Ma:2010ft}.
 
 
-\section{Fluid Flow}
-\label{sec:fluid}
-
-The fluid flow example implements Jos Stam's stable fluid
-algorithm~\cite{Stam:1999ey}, which is a fast approximate algorithm intended for
-animation and games, rather than accurate engineering simulation. An example
-sequence is shown in Figure~\ref{fig:fluid_steps}.
-
-\begin{figure}
-    \begin{center}
-        \includegraphics[width=0.3\textwidth]{images/sec-6/fluid/fluid-10}
-        \includegraphics[width=0.3\textwidth]{images/sec-6/fluid/fluid-50}
-        \includegraphics[width=0.3\textwidth]{images/sec-6/fluid/fluid-75}
-    \end{center}
-    \caption[Example of the fluid flow simulation]{An example showing the
-        progression of the fluid flow simulation for a set of initial conditions
-        after 10 (left), 50 (centre) and 75 (right) steps.}
-    \label{fig:fluid_steps}
-\end{figure}
-
-The core of the algorithm is a finite time step simulation on a grid,
-implemented as a matrix relaxation involving the discrete Laplace operator
-($\nabla^2$). This step, known as the linear solver, is used to diffuse the
-density and velocity fields throughout the grid, as well as apply a projection
-operator to the velocity field to ensure it conserves mass. The linear solver is
-implemented in terms of a stencil convolution, repeatedly computing the
-following for each grid element to allow the solution to converge:
-\[
-u_{i,j}^{''} = \left( u_{i,j} + a \cdot \left( u'_{i-1,j}+u'_{i+1,j}+u'_{i,j-1}+u'_{i,j+1} \right) \right) / c
-\]
-Here, $u$ is the grid in the previous time step, $u'$ the grid in the current
-time step and previous relaxation iteration, and $u''$ the current time step and
-iteration. The values $a$ and $c$ are constants chosen by the simulation
-parameters.
-
-\begin{figure}
-    \begin{center}
-        \includegraphics[width=0.8\textwidth]{images/sec-6/fluid/fluid}
-    \end{center}
-    \caption[Fluid flow simulation kernel benchmarks]{Kernel runtimes for the
-        fluid flow simulation, in Accelerate with and without optimisations,
-        compared to sequential and parallel CPU implementations. Running the
-        Repa program with seven threads on the eight cores was found to be
-        faster. Note the log-log scale.}
-    \label{fig:fluid}
-\end{figure}
-
-Figure~\ref{fig:fluid} compares Accelerate to a parallel implementation written
-in Repa and running on the host CPU \cite{Lippmeier:2012gx}. The program is
-extremely memory intensive, performing approximately 160 convolutions of the
-grid per time step. Given the nature of the computation, we find that the raw
-bandwidth available on the CUDA device, which is much greater than that
-available to the CPU, results in correspondingly shorter run times. Since the
-program consists of a sequence of stencil operations, fusion does not apply to
-this program. Sharing recovery has a surprisingly minimal impact because the
-implementation of stencils always shares some parts of the computation: namely
-access to the grid elements $u_{xy}$, precisely because these operations are so
-expensive.
-
-The CUDA SDK sample programs includes a version of Jos Stam's fluid flow
-algorithm, but that is computed using Fourier transforms and is intermingled
-with OpenGL code for the visualisation, so we can not directly compare to that
-implementation.
-
-% \note{tk: example showing performance of \code{map (+1)} versus the equivalent
-% of using a stencil: extra addressing arithmetic should be significant. For fluid
-% flow, the actual computation time (probably) greatly outweighs the extra
-% arithmetic.}
-%
-% \note{TK: Check the fluid demo that is part of the CUDA SDK, it looks like it
-% might implement something similar.}
-
-
-\section{Canny edge detection}
-\label{sec:canny}
-
-The edge detection example applies the Canny algorithm~\cite{Canny:1986et} to
-rectangular images of various sizes. Figure~\ref{fig:canny} compares Accelerate
-to parallel implementations on the CPU and GPU\@. The overall algorithm consists
-of seven distinct phases, the first six of which are naturally data parallel and
-are performed on the GPU\@. The last phase uses a recursive algorithm to
-``connect'' the pixels that make up the output lines. In our implementation this
-phase is performed on the CPU, which requires the image data to be transferred
-from the GPU back to the CPU for processing, and accounts for the non-linear
-slowdown visible with smaller image sizes. In contrast, OpenCV is able to
-perform the final step on the GPU\@. The benchmark ``Accelerate (whole
-program)'' includes the time to transfer the image data back to the host for the
-final processing step. Also shown are the run times for just the first six data
-parallel phases, which exhibit linear speedup and do not include data transfer
-to the host.
-
-\begin{figure}
-    \begin{center}
-        \includegraphics[width=0.45\textwidth]{images/sec-6/canny/lena}
-        \includegraphics[width=0.45\textwidth]{images/sec-6/canny/lena-edges}
-    \end{center}
-    \caption[Example of the Canny edge detection algorithm]{An example of the
-        Canny algorithm applied to the Lena standard test image (left) which
-        identifies edge pixels in the image (right).}
-    \label{fig:lena}
-\end{figure}
-
-Neglecting the final phase, note that the data parallel phase is still slightly
-slower than in OpenCV. As discussed in
-Section~\ref{sec:parallel_stencil}, this is because the stencil kernels
-in Accelerate currently make a test for every array access to see if the element
-is in bounds, or if it lies outside the array and needs to be handled specially,
-even though the vast majority of points in the array are far from the boundary.
-
-\begin{figure}
-    \begin{center}
-        \includegraphics[width=0.8\textwidth]{images/sec-6/canny/canny}
-    \end{center}
-    \caption[Canny edge detection benchmarks]{Runtimes for the Canny edge
-        detection algorithm, comparing the Accelerate kernels and whole program
-        to sequential and parallel implementations. Note the log-log scale.}
-    \label{fig:canny}
-\end{figure}
-
-
-\subsection{Stencil merging}
-
-Two of the data parallel stages of the Canny algorithm are the calculation of
-the image intensity gradients by convolving the image with the $3\times3$
-kernels shown below. This convolution, known as the Sobel operator, is a
-discrete differentiation operator that computes an approximation of the
-horizontal and vertical image gradients.
-%
-\begin{equation*}
-    \text{Sobel}_x =
-        \begin{bmatrix*}[r]
-          -1 & 0 & 1 \\
-          -2 & 0 & 2 \\
-          -1 & 0 & 1
-        \end{bmatrix*}
-    \qquad
-    \text{Sobel}_y =
-        \begin{bmatrix*}[r]
-           1 &  2 &  1 \\
-           0 &  0 &  0 \\
-          -1 & -2 & -1
-        \end{bmatrix*}
-\end{equation*}
-
-There is a significant amount of sharing between these two kernels, in terms of
-the coefficients required to compute the derivative at each point. Thus, it
-could be beneficial to merge these two stencils into a single kernel, rather
-than computing them separately. As with all shortcut fusion methods, the system
-presented here does not combine multiple passes over the same array into a
-single traversal that computes multiple results. We leave this, as well as other
-significant stencil
-optimisations~\cite{Henretty:2013wb,Kamil:2006un,Lesniak:2010}, to future work.
-
-% We leave this to future work,
-% for example, in the style of data flow fusion~\cite{Lippmeier:2013vz}.
-
-
-\section{Radix sort}
-
-The radix sort benchmark implements a simple parallel radix sort algorithm as
-described by \citet{Blelloch:1990vl} to sort an array by an integral key. We
-compare our implementation of Blelloch's algorithm in Accelerate, shown in
-Listing~\ref{lst:radixsort}, to one written in Nikola~\cite{Mainland:2010vj},
-which is also an embedded language in Haskell for CUDA programming.%
-\footnote{To be more specific, we estimate based on the results presented in the
-paper~\cite{Mainland:2010vj} as Nikola no longer compiles with recent versions
-of GHC, and the development version to replace it is not yet complete.
-Nevertheless, results are informative as the same GPU, a Tesla T10, is used in
-both cases.}
-For this benchmark the Accelerate code is faster than Nikola, because Nikola is
-limited to single kernel programs so must transfer every intermediate result
-back to the host. Additionally, we are faster than a sequential radix sort
-implementation using \texttt{Data.Vector} for as few as $\sim256$ elements,
-whereas Nikola requires a dataset of about 32kB before the additional
-parallelism of the GPU outperforms the sequential
-version~\cite{Mainland:2010vj}.
-
-\begin{lstlisting}[style=haskell_float
-    ,label=lst:radixsort
-    ,caption={Radix sort algorithm}]
-class Elt e => Radix e where
-  passes :: e -> Int                            -- number of passes (bits) required to sort this key type
-  radix  :: Exp Int -> Exp e -> Exp Int         -- extract the $n^{th}$ bit of the key
-
-sortBy :: forall a r. (Elt a, Radix r)
-       => (Exp a -> Exp r)
-       -> Acc (Vector a)
-       -> Acc (Vector a)
-sortBy rdx arr = foldr1 (>->) (P.map radixPass [0..p-1]) arr    -- loop over bits of the key, low\ldots
-  where                                                         -- \ldots bit first to maintain sort order
-    p           = passes (undefined :: r)
-    deal f x    = let (a,b) = unlift x in (f ==* 0) ? (a,b)
-
-    radixPass k v =
-      let k'    = unit (constant k)                             -- to create reusable kernels
-          flags = A.map (radix (the k') . rdx) v                -- extract the sort key
-          idown = prescanl (+) 0 . A.map (xor 1)        $ flags -- move elements to the beginning\ldots
-          iup   = A.map (size v - 1 -) . prescanr (+) 0 $ flags -- \ldots end of the vector
-          index = A.zipWith deal flags (A.zip idown iup)
-      in
-      permute const v (\ix -> index1 (index!ix)) v              -- move elements to new position
-\end{lstlisting}
-
-The @radixPass@ function sorts the vector @v@ based on the value of
-bit @k@; moving elements with a zero at that bit to the beginning of the
-vector and those with a one bit to the end. This simple algorithm requires
-$b$ iterations to sort an array of elements whose keys are $b$-bits wide, and
-each pass requires multiple traversals of the array.
-
-\begin{figure}
-    \begin{center}
-        \includegraphics[width=0.8\textwidth]{images/sec-6/radixsort/radixsort}
-    \end{center}
-    \caption[Radix sort kernel benchmarks]{Kernel runtimes for the radix sort benchmark
-        of signed 32-bit integers, comparing the Accelerate version to other
-        parallel implementations. Note the log-log scale.}
-    \label{fig:radixsort}
-\end{figure}
-
-As seen in Figure~\ref{fig:radixsort}, the absolute performance of this simple
-algorithm, which sorts the array by a single bit at a time, is quite low.
-Implementations of radix sort optimised for the CUDA
-architecture~\cite{Satish:2009kx,Merrill:2011bz,ThrustAParallelT:ub}, are
-approximately $10\times$ faster because they make efficient use of memory
-bandwidth and on-chip shared memory to sort keys by 8-bits at a time. Such
-implementations are, essentially, different algorithms than Blelloch's radix
-sort algorithm that we have implemented here, but serve to illustrate the
-absolute performance of the device. To address this we have implemented a
-foreign function interface for Accelerate to take advantage of existing
-high-performance libraries (\S\ref{sec:ffi}). The foreign function interface is
-orthogonal to the work presented here of optimising programs written in the
-Accelerate language. Useful future work would be to combine a fast-yet-fixed
-foreign implementation with a more generic interface, using a method such
-as~\cite{Henglein:2013dd}.
-
-
 \section{Sparse-matrix vector multiplication}
 \label{sec:smvm}
 
@@ -1623,6 +1387,294 @@ performance, but is left to future work.
 %
 % The regression relative to
 % our previous result will be investigated. Nevertheless,
+
+\section{Canny edge detection}
+\label{sec:canny}
+
+The edge detection example applies the Canny algorithm~\cite{Canny:1986et} to
+rectangular images of various sizes. Figure~\ref{fig:canny} compares Accelerate
+to parallel implementations on the CPU and GPU\@. The overall algorithm consists
+of seven distinct phases, the first six of which are naturally data parallel and
+are performed on the GPU\@. The last phase uses a recursive algorithm to
+``connect'' the pixels that make up the output lines. In our implementation this
+phase is performed on the CPU, which requires the image data to be transferred
+from the GPU back to the CPU for processing, and accounts for the non-linear
+slowdown visible with smaller image sizes. In contrast, OpenCV is able to
+perform the final step on the GPU\@. The benchmark ``Accelerate (whole
+program)'' includes the time to transfer the image data back to the host for the
+final processing step. Also shown are the run times for just the first six data
+parallel phases, which exhibit linear speedup and do not include data transfer
+to the host.
+
+\begin{figure}
+    \begin{center}
+        \includegraphics[width=0.45\textwidth]{images/sec-6/canny/lena}
+        \includegraphics[width=0.45\textwidth]{images/sec-6/canny/lena-edges}
+    \end{center}
+    \caption[Example of the Canny edge detection algorithm]{An example of the
+        Canny algorithm applied to the Lena standard test image (left) which
+        identifies edge pixels in the image (right).}
+    \label{fig:lena}
+\end{figure}
+
+Neglecting the final phase, note that the data parallel phase is still slightly
+slower than in OpenCV. As discussed in
+Section~\ref{sec:parallel_stencil}, this is because the stencil kernels
+in Accelerate currently make a test for every array access to see if the element
+is in bounds, or if it lies outside the array and needs to be handled specially,
+even though the vast majority of points in the array are far from the boundary.
+
+\begin{figure}
+    \begin{center}
+        \includegraphics[width=0.8\textwidth]{images/sec-6/canny/canny}
+    \end{center}
+    \caption[Canny edge detection benchmarks]{Runtimes for the Canny edge
+        detection algorithm, comparing the Accelerate kernels and whole program
+        to sequential and parallel implementations. Note the log-log scale.}
+    \label{fig:canny}
+\end{figure}
+
+
+\subsection{Stencil merging}
+
+Two of the data parallel stages of the Canny algorithm are the calculation of
+the image intensity gradients by convolving the image with the $3\times3$
+kernels shown below. This convolution, known as the Sobel operator, is a
+discrete differentiation operator that computes an approximation of the
+horizontal and vertical image gradients.
+%
+\begin{equation*}
+    \text{Sobel}_x =
+        \begin{bmatrix*}[r]
+          -1 & 0 & 1 \\
+          -2 & 0 & 2 \\
+          -1 & 0 & 1
+        \end{bmatrix*}
+    \qquad
+    \text{Sobel}_y =
+        \begin{bmatrix*}[r]
+           1 &  2 &  1 \\
+           0 &  0 &  0 \\
+          -1 & -2 & -1
+        \end{bmatrix*}
+\end{equation*}
+
+There is a significant amount of sharing between these two kernels, in terms of
+the coefficients required to compute the derivative at each point. Thus, it
+could be beneficial to merge these two stencils into a single kernel, rather
+than computing them separately. As with all shortcut fusion methods, the system
+presented here does not combine multiple passes over the same array into a
+single traversal that computes multiple results. We leave this, as well as other
+significant stencil
+optimisations~\cite{Henretty:2013wb,Kamil:2006un,Lesniak:2010}, to future work.
+
+% We leave this to future work,
+% for example, in the style of data flow fusion~\cite{Lippmeier:2013vz}.
+
+
+\section{Fluid Flow}
+\label{sec:fluid}
+
+The fluid flow example implements Jos Stam's stable fluid
+algorithm~\cite{Stam:1999ey}, which is a fast approximate algorithm intended for
+animation and games, rather than accurate engineering simulation. An example
+sequence is shown in Figure~\ref{fig:fluid_steps}.
+
+\begin{figure}
+    \begin{center}
+        \includegraphics[width=0.3\textwidth]{images/sec-6/fluid/fluid-10}
+        \includegraphics[width=0.3\textwidth]{images/sec-6/fluid/fluid-50}
+        \includegraphics[width=0.3\textwidth]{images/sec-6/fluid/fluid-75}
+    \end{center}
+    \caption[Example of the fluid flow simulation]{An example showing the
+        progression of the fluid flow simulation for a set of initial conditions
+        after 10 (left), 50 (centre) and 75 (right) steps.}
+    \label{fig:fluid_steps}
+\end{figure}
+
+The core of the algorithm is a finite time step simulation on a grid,
+implemented as a matrix relaxation involving the discrete Laplace operator
+($\nabla^2$). This step, known as the linear solver, is used to diffuse the
+density and velocity fields throughout the grid, as well as apply a projection
+operator to the velocity field to ensure it conserves mass. The linear solver is
+implemented in terms of a stencil convolution, repeatedly computing the
+following for each grid element to allow the solution to converge:
+\[
+u_{i,j}^{''} = \left( u_{i,j} + a \cdot \left( u'_{i-1,j}+u'_{i+1,j}+u'_{i,j-1}+u'_{i,j+1} \right) \right) / c
+\]
+Here, $u$ is the grid in the previous time step, $u'$ the grid in the current
+time step and previous relaxation iteration, and $u''$ the current time step and
+iteration. The values $a$ and $c$ are constants chosen by the simulation
+parameters. The core implementation of the algorithm is shown in
+Listing~\ref{lst:fluid}.
+
+\begin{lstlisting}[style=haskell_float
+    ,label=lst:fluid
+    ,caption={Fluid flow simulation}]
+type Timestep           = Float
+type Diffusion          = Float
+type Density            = Float
+type Velocity           = (Float, Float)
+
+type Field a            = Array DIM2 a
+type DensityField       = Field Density
+type VelocityField      = Field Velocity
+
+class Elt e => FieldElt e where
+  ...
+
+instance FieldElt Density
+instance FieldElt Velocity
+
+
+diffuse :: FieldElt e => Int -> Timestep -> Diffusion -> Acc (Field e) -> Acc (Field e)
+diffuse steps dt dn df0 =
+  a ==* 0
+    ?| ( df0 , foldl1 (.) (P.replicate steps diffuse1) df0 )
+  where
+    a           = A.constant dt * A.constant dn * (A.fromIntegral (A.size df0))
+    c           = 1 + 4*a
+
+    diffuse1 df = A.stencil2 relax (A.Constant zero) df0 (A.Constant zero) df
+
+    relax :: FieldElt e => A.Stencil3x3 e -> A.Stencil3x3 e -> Exp e
+    relax (_,(_,x0,_),_) ((_,t,_), (l,_,r), (_,b,_)) = (x0 .+. a .*. (l.+.t.+.r.+.b)) ./. c
+
+
+project :: Int -> Acc VelocityField -> Acc VelocityField
+project steps vf = A.stencil2 poisson (A.Constant zero) vf (A.Constant zero) p
+  where
+    grad        = A.stencil divF (A.Constant zero) vf
+    p1          = A.stencil2 pF (A.Constant zero) grad (A.Constant zero)
+    p           = foldl1 (.) (P.replicate steps p1) grad
+
+    poisson :: A.Stencil3x3 Velocity -> A.Stencil3x3 Float -> Exp Velocity
+    poisson (_,(_,uv,_),_) ((_,t,_), (l,_,r), (_,b,_)) = uv .-. 0.5 .*. A.lift (r-l, b-t)
+
+    divF :: A.Stencil3x3 Velocity -> Exp Float
+    divF ((_,t,_), (l,_,r), (_,b,_)) = -0.5 * (A.fst r - A.fst l + A.snd b - A.snd t)
+
+    pF :: A.Stencil3x3 Float -> A.Stencil3x3 Float -> Exp Float
+    pF (_,(_,x,_),_) ((_,t,_), (l,_,r), (_,b,_)) = 0.25 * (x + l + t + r + b)
+\end{lstlisting}
+
+
+\begin{figure}
+    \begin{center}
+        \includegraphics[width=0.8\textwidth]{images/sec-6/fluid/fluid}
+    \end{center}
+    \caption[Fluid flow simulation kernel benchmarks]{Kernel runtimes for the
+        fluid flow simulation, in Accelerate with and without optimisations,
+        compared to sequential and parallel CPU implementations. Running the
+        Repa program with seven threads on the eight cores was found to be
+        faster. Note the log-log scale.}
+    \label{fig:fluid}
+\end{figure}
+
+Figure~\ref{fig:fluid} compares Accelerate to a parallel implementation written
+in Repa and running on the host CPU \cite{Lippmeier:2012gx}. The program is
+extremely memory intensive, performing approximately 160 convolutions of the
+grid per time step. Given the nature of the computation, we find that the raw
+bandwidth available on the CUDA device, which is much greater than that
+available to the CPU, results in correspondingly shorter run times. Since the
+program consists of a sequence of stencil operations, fusion does not apply to
+this program. Sharing recovery has a surprisingly minimal impact because the
+implementation of stencils always shares some parts of the computation: namely
+access to the grid elements $u_{xy}$, precisely because these operations are so
+expensive.
+
+% The CUDA SDK sample programs includes a version of Jos Stam's fluid flow
+% algorithm, but that is computed using Fourier transforms and is intermingled
+% with OpenGL code for the visualisation, so we can not directly compare to that
+% implementation.
+
+% \note{tk: example showing performance of \code{map (+1)} versus the equivalent
+% of using a stencil: extra addressing arithmetic should be significant. For fluid
+% flow, the actual computation time (probably) greatly outweighs the extra
+% arithmetic.}
+%
+% \note{TK: Check the fluid demo that is part of the CUDA SDK, it looks like it
+% might implement something similar.}
+
+
+\section{Radix sort}
+
+The radix sort benchmark implements a simple parallel radix sort algorithm as
+described by \citet{Blelloch:1990vl} to sort an array by an integral key. We
+compare our implementation of Blelloch's algorithm in Accelerate, shown in
+Listing~\ref{lst:radixsort}, to one written in Nikola~\cite{Mainland:2010vj},
+which is also an embedded language in Haskell for CUDA programming.%
+\footnote{To be more specific, we estimate based on the results presented in the
+paper~\cite{Mainland:2010vj} as Nikola no longer compiles with recent versions
+of GHC, and the development version to replace it is not yet complete.
+Nevertheless, results are informative as the same GPU, a Tesla T10, is used in
+both cases.}
+For this benchmark the Accelerate code is faster than Nikola, because Nikola is
+limited to single kernel programs so must transfer every intermediate result
+back to the host. Additionally, we are faster than a sequential radix sort
+implementation using \texttt{Data.Vector} for as few as $\sim256$ elements,
+whereas Nikola requires a dataset of about 32kB before the additional
+parallelism of the GPU outperforms the sequential
+version~\cite{Mainland:2010vj}.
+
+\begin{lstlisting}[style=haskell_float
+    ,label=lst:radixsort
+    ,caption={Radix sort algorithm}]
+class Elt e => Radix e where
+  passes :: e -> Int                            -- number of passes (bits) required to sort this key type
+  radix  :: Exp Int -> Exp e -> Exp Int         -- extract the $n^{th}$ bit of the key
+
+sortBy :: forall a r. (Elt a, Radix r)
+       => (Exp a -> Exp r)
+       -> Acc (Vector a)
+       -> Acc (Vector a)
+sortBy rdx arr = foldr1 (>->) (P.map radixPass [0..p-1]) arr    -- loop over bits of the key, low\ldots
+  where                                                         -- \ldots bit first to maintain sort order
+    p           = passes (undefined :: r)
+    deal f x    = let (a,b) = unlift x in (f ==* 0) ? (a,b)
+
+    radixPass k v =
+      let k'    = unit (constant k)                             -- to create reusable kernels
+          flags = A.map (radix (the k') . rdx) v                -- extract the sort key
+          idown = prescanl (+) 0 . A.map (xor 1)        $ flags -- move elements to the beginning\ldots
+          iup   = A.map (size v - 1 -) . prescanr (+) 0 $ flags -- \ldots end of the vector
+          index = A.zipWith deal flags (A.zip idown iup)
+      in
+      permute const v (\ix -> index1 (index!ix)) v              -- move elements to new position
+\end{lstlisting}
+
+The @radixPass@ function sorts the vector @v@ based on the value of
+bit @k@; moving elements with a zero at that bit to the beginning of the
+vector and those with a one bit to the end. This simple algorithm requires
+$b$ iterations to sort an array of elements whose keys are $b$-bits wide, and
+each pass requires multiple traversals of the array.
+
+\begin{figure}
+    \begin{center}
+        \includegraphics[width=0.8\textwidth]{images/sec-6/radixsort/radixsort}
+    \end{center}
+    \caption[Radix sort kernel benchmarks]{Kernel runtimes for the radix sort benchmark
+        of signed 32-bit integers, comparing the Accelerate version to other
+        parallel implementations. Note the log-log scale.}
+    \label{fig:radixsort}
+\end{figure}
+
+As seen in Figure~\ref{fig:radixsort}, the absolute performance of this simple
+algorithm, which sorts the array by a single bit at a time, is quite low.
+Implementations of radix sort optimised for the CUDA
+architecture~\cite{Satish:2009kx,Merrill:2011bz,ThrustAParallelT:ub}, are
+approximately $10\times$ faster because they make efficient use of memory
+bandwidth and on-chip shared memory to sort keys by 8-bits at a time. Such
+implementations are, essentially, different algorithms than Blelloch's radix
+sort algorithm that we have implemented here, but serve to illustrate the
+absolute performance of the device. To address this we have implemented a
+foreign function interface for Accelerate to take advantage of existing
+high-performance libraries (\S\ref{sec:ffi}). The foreign function interface is
+orthogonal to the work presented here of optimising programs written in the
+Accelerate language. Useful future work would be to combine a fast-yet-fixed
+foreign implementation with a more generic interface, using a method such
+as~\cite{Henglein:2013dd}.
+
 
 \section{Shortest paths in a graph}
 \label{sec:floyd_warshall}
